@@ -1,10 +1,14 @@
 package com.kairos.commons.utils;
 
 import com.kairos.enums.DurationType;
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
 import org.joda.time.format.DateTimeFormat;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.validation.constraints.NotNull;
 import java.sql.Timestamp;
@@ -17,14 +21,15 @@ import java.time.temporal.*;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
+import static com.kairos.enums.DurationType.DAYS;
 import static java.time.temporal.TemporalAdjusters.firstInMonth;
 import static java.time.temporal.TemporalAdjusters.previousOrSame;
 
 /**
  * Created by oodles on 1/2/17.
  */
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public  class DateUtils {
-    //TODO gotta add logger
     public static final String ISO_FORMAT = "yyyy-MM-dd'T'HH:mm:ss";
     public static final String MONGODB_QUERY_DATE_FORMAT = "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'";
     public static final String ONLY_DATE = "yyyy-MM-dd";
@@ -32,6 +37,7 @@ public  class DateUtils {
     public static final String KPI_DATE_FORMAT = "dd-MMM-yy";
     public static final String COMMON_TIME_FORMAT="HH:mm";
     public static final String THE_DATE_MUST_NOT_BE_NULL = "The date must not be null";
+    public static final Logger LOGGER = LoggerFactory.getLogger(DateUtils.class);
 
     public static Date getEndOfDay(Date date) {
         LocalDateTime localDateTime = dateToLocalDateTime(date);
@@ -113,7 +119,7 @@ public  class DateUtils {
         WeekFields weekFields = WeekFields.of(Locale.getDefault());
         return LocalDateTime.now()
                 .withYear(year)
-                .with(weekFields.weekOfYear(), week + 1)
+                .with(weekFields.weekOfYear(), week + 1l)
                 .with(weekFields.dayOfWeek(), 1);
     }
 
@@ -135,7 +141,7 @@ public  class DateUtils {
 
         Calendar c = Calendar.getInstance();
         c.setTime(startDate);
-        c.add(Calendar.MINUTE, (int) (long) reducedTime);
+        c.add(Calendar.MINUTE, (int)reducedTime);
 
         return c.getTime();
     }
@@ -174,7 +180,6 @@ public  class DateUtils {
     }
 
     public static Date getCurrentDate() {
-        //TODO this cant be system's date. this gotta be unit;s date. sachin
         return new Date();
     }
 
@@ -189,7 +194,7 @@ public  class DateUtils {
      */
 
     public static LocalDate getDateOfWeekInMonth(LocalDate date, int weekNumber, DayOfWeek dayOfWeek) {
-        return date.with(firstInMonth(dayOfWeek)).plusWeeks(weekNumber - 1);
+        return date.with(firstInMonth(dayOfWeek)).plusWeeks(weekNumber - 1l);
     }
 
     /*
@@ -204,20 +209,6 @@ public  class DateUtils {
         }
         return calculatedDate;
     }
-
-    /**
-     * this method is checking whether task start date is equal to date from or
-     * task start date lies between date from and date to
-     *
-     * @param taskStartDate
-     * @param dateTimeFrom
-     * @param dateTimeTo
-     * @return
-     */
-    public static boolean isTaskOnOrBetweenDates(LocalDateTime taskStartDate, LocalDateTime dateTimeFrom, LocalDateTime dateTimeTo) {
-        return (taskStartDate.isEqual(dateTimeFrom) || (taskStartDate.isAfter(dateTimeFrom) && taskStartDate.isBefore(dateTimeTo)));
-    }
-
 
     public static Date getDateFromLocalDate(LocalDate localDate) {
         return localDate != null
@@ -338,19 +329,12 @@ public  class DateUtils {
 
     public static int getDifferenceBetweenDatesInDays(LocalDate startDate, LocalDate endDate, DurationType durationType) {
         switch (durationType) {
-            case DAYS: {
-                return Period.between(startDate, endDate).getDays();
-            }
-            case MINUTES: {
-                return (3600 * Period.between(startDate, endDate).getDays());
-            }
-            case HOURS: {
-                return (60 * Period.between(startDate, endDate).getDays());
-            }
+            case DAYS: return Period.between(startDate, endDate).getDays();
+            case MINUTES: return (3600 * Period.between(startDate, endDate).getDays());
+            case HOURS: return (60 * Period.between(startDate, endDate).getDays());
             default:break;
         }
         return Period.between(startDate, endDate).getDays();
-
     }
 
     public static DateTime toJodaDateTime(LocalDate localDate) {
@@ -416,33 +400,20 @@ public  class DateUtils {
 
 
     public static Long getDurationBetweenTwoLocalDates(LocalDate startDate, LocalDate endDate, DurationType durationType) {
-        switch (durationType) {
-            // Add case for Month, Year etc
-            case DAYS: {
-                return ChronoUnit.DAYS.between(startDate, endDate);
-            }
-            default:
-                return null;
+        if(DAYS.equals(durationType)){
+            return ChronoUnit.DAYS.between(startDate, endDate);
+        }else {
+            return null;
         }
     }
 
     public static LocalDateTime addDurationInLocalDateTime(LocalDateTime localDateTime, int duration, DurationType durationType, int recurringNumber) {
         switch (durationType) {
-            case DAYS: {
-                return localDateTime.plusDays(duration * recurringNumber);
-            }
-            case WEEKS: {
-                return localDateTime.plusDays(duration * recurringNumber * 7);
-            }
-            case MONTHS: {
-                return localDateTime.plusMonths(duration * recurringNumber);
-            }
-            case HOURS: {
-                return localDateTime.plusHours(duration * recurringNumber);
-            }
-            case MINUTES: {
-                return localDateTime.plusMinutes(duration * recurringNumber);
-            }
+            case DAYS: return localDateTime.plusDays(duration * (long)recurringNumber);
+            case WEEKS: return localDateTime.plusDays(duration * (long)recurringNumber * 7);
+            case MONTHS: return localDateTime.plusMonths(duration * (long)recurringNumber);
+            case HOURS: return localDateTime.plusHours(duration * (long)recurringNumber);
+            case MINUTES: return localDateTime.plusMinutes(duration * (long)recurringNumber);
             default:break;
 
 
@@ -451,15 +422,9 @@ public  class DateUtils {
     }
     public static LocalDateTime substractDurationInLocalDateTime(LocalDateTime localDateTime, int duration, DurationType durationType) {
         switch (durationType) {
-            case DAYS: {
-                return localDateTime.minusDays(duration);
-            }
-            case HOURS: {
-                return localDateTime.minusHours(duration );
-            }
-            case MINUTES: {
-                return localDateTime.minusMinutes(duration );
-            }
+            case DAYS: return localDateTime.minusDays(duration);
+            case HOURS: return localDateTime.minusHours(duration );
+            case MINUTES: return localDateTime.minusMinutes(duration );
             default:break;
         }
         return localDateTime;
@@ -467,18 +432,10 @@ public  class DateUtils {
 
     public static LocalDate addDurationInLocalDate(LocalDate localDate, int duration, DurationType durationType, int recurringNumber) {
         switch (durationType) {
-            case DAYS: {
-                return localDate.plusDays(duration * recurringNumber);
-            }
-            case WEEKS: {
-                return localDate.plusDays(duration * recurringNumber * 7);
-            }
-            case MONTHS: {
-                return localDate.plusMonths(duration * recurringNumber);
-            }
-            case YEAR: {
-                return localDate.plusYears(duration * recurringNumber);
-            }
+            case DAYS: return localDate.plusDays(duration * (long)recurringNumber);
+            case WEEKS: return localDate.plusDays(duration * (long)recurringNumber * 7);
+            case MONTHS: return localDate.plusMonths(duration * (long)recurringNumber);
+            case YEAR: return localDate.plusYears(duration * (long)recurringNumber);
             default:break;
         }
         return localDate;
@@ -626,7 +583,7 @@ public  class DateUtils {
         try {
             localDate = DateUtils.asLocalDate(format.parse(receivedDate));
         } catch (ParseException e) {
-            e.printStackTrace();
+            LOGGER.error("error {}",e.getMessage());
         }
         return localDate;
 
@@ -668,13 +625,13 @@ public  class DateUtils {
         minutes = seconds / 60;
         hours = minutes / 60;
         minutes = minutes % 60;
-        return new Double(Math.abs(hours)+"."+Math.abs(minutes));
+        return Double.valueOf(Math.abs(hours)+"."+Math.abs(minutes));
     }
 
     public static Double getHoursByMinutes(double totalMinutes){
         Integer hour  = (int) totalMinutes/(60);
         Integer minutes = (int)totalMinutes % 60;
-        return new Double(hour+"."+Math.abs(minutes));
+        return Double.valueOf(hour+"."+Math.abs(minutes));
     }
 
     public static int getHourByMinutes(double totalMinutes){
@@ -734,7 +691,7 @@ public  class DateUtils {
             try {
                 date = isoFormat.parse(dateReceived).getTime();
             } catch (ParseException e) {
-                e.printStackTrace();
+                LOGGER.error("error {}",e.getMessage());
             }
         }
         return date;
@@ -801,7 +758,7 @@ public  class DateUtils {
         return date;
     }
 
-    public static LocalDate getPriviousLocaDateByDurationType(LocalDate date, DurationType durationType,int value) {
+    public static LocalDate getPriviousLocaDateByDurationType(LocalDate date, DurationType durationType) {
         switch (durationType) {
             case MONTHS:
                 date = date.with(TemporalAdjusters.firstDayOfMonth());
@@ -922,12 +879,12 @@ public  class DateUtils {
     }
 
     public static ZonedDateTime roundDateByMinutes(ZonedDateTime zonedDateTime,int minutes){
-        return zonedDateTime.truncatedTo(ChronoUnit.HOURS).plusMinutes((int)Math.ceil((double)zonedDateTime.get(ChronoField.MINUTE_OF_HOUR)/minutes)*minutes);
+        return zonedDateTime.truncatedTo(ChronoUnit.HOURS).plusMinutes((int)Math.ceil((double)zonedDateTime.get(ChronoField.MINUTE_OF_HOUR)/minutes)* (long)minutes);
     }
 
     public static Date roundDateByMinutes(Date date,int minutes){
         ZonedDateTime zonedDateTime = asZoneDateTime(date);
-        return asDate(zonedDateTime.truncatedTo(ChronoUnit.HOURS).plusMinutes((int)Math.round((double)zonedDateTime.get(ChronoField.MINUTE_OF_HOUR)/minutes)*minutes));
+        return asDate(zonedDateTime.truncatedTo(ChronoUnit.HOURS).plusMinutes((int)Math.round((double)zonedDateTime.get(ChronoField.MINUTE_OF_HOUR)/minutes)*(long)minutes));
     }
     public static Set<DayOfWeek> getAllDaysBetweenDays(DayOfWeek startDayOfWeek, DayOfWeek endDayOfWeek) {
         Set<DayOfWeek> dayOfWeeks = new HashSet<>();
